<!--
  -
  - Copyright 2015 The REST Switch Authors
  -
  - Licensed under the Apache License, Version 2.0 (the "License");
  - you may not use this file except in compliance with the License.
  - You may obtain a copy of the License at
  -
  -     http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, Licensor provides the Work (and each Contributor provides its 
  - Contributions) on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied, including, 
  - without limitation, any warranties or conditions of TITLE, NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A PARTICULAR 
  - PURPOSE. You are solely responsible for determining the appropriateness of using or redistributing the Work and assume any 
  - risks associated with Your exercise of permissions under this License.
  -
  - Author: John Clark (johnc@restswitch.com)
  -
  -->

<resources>
    <string name="app_name">REST Switch Control Panel</string>

    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="host_name">Host Name</string>
    <string name="host_name_default">restswitch.com</string>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="logo">logo</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="devid1">Device Id 1</string>
    <string name="devid2">Device Id 2</string>
</resources>
