<?xml version="1.0" encoding="utf-8"?>
<!--
  -
  - Copyright 2015 The REST Switch Authors
  -
  - Licensed under the Apache License, Version 2.0 (the "License");
  - you may not use this file except in compliance with the License.
  - You may obtain a copy of the License at
  -
  -     http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, Licensor provides the Work (and each Contributor provides its 
  - Contributions) on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied, including, 
  - without limitation, any warranties or conditions of TITLE, NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A PARTICULAR 
  - PURPOSE. You are solely responsible for determining the appropriateness of using or redistributing the Work and assume any 
  - risks associated with Your exercise of permissions under this License.
  -
  - Author: John Clark (johnc@restswitch.com)
  -
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="devid1"
        android:title="@string/devid1"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="devid2"
        android:title="@string/devid2"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="host_name"
        android:title="@string/host_name"
        android:defaultValue="@string/host_name_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="email"
        android:title="@string/email"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="passwd"
        android:title="@string/passwd"
        android:summary="   ********"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLines="1" />
</PreferenceScreen>
